<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView android:text="@string/app_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_large_material"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_movie_app"
        android:id="@+id/button_movie_app"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:width="@dimen/button_width" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_scores_app"
        android:id="@+id/button_scores_app"
        android:layout_below="@+id/button_movie_app"
        android:layout_centerHorizontal="true"
        android:width="@dimen/button_width"
        android:layout_marginTop="5dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_library_app"
        android:id="@+id/button_library_app"
        android:layout_below="@+id/button_scores_app"
        android:layout_centerHorizontal="true"
        android:width="@dimen/button_width"
        android:layout_marginTop="5dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_bigger_app"
        android:id="@+id/button_bigger_app"
        android:layout_below="@+id/button_library_app"
        android:layout_centerHorizontal="true"
        android:width="@dimen/button_width"
        android:layout_marginTop="5dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_xyz_app"
        android:id="@+id/button_xyz_app"
        android:layout_below="@+id/button_bigger_app"
        android:layout_centerHorizontal="true"
        android:width="@dimen/button_width"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_capstone_app"
        android:id="@+id/button_capstone_app"
        android:layout_below="@+id/button_xyz_app"
        android:layout_centerHorizontal="true"
        android:width="@dimen/button_width"
        android:layout_marginTop="5dp" />


</RelativeLayout>
